# gl-bev

./: Cargo.toml  LICENSE  README.md
bowl/: Cargo.toml
bowl/shader/: bowl_mix_double_fs.glsl  bowl_mix_double_fs_dma.glsl  bowl_mix_double_vs.glsl  bowl_mix_simple_fs.glsl  bowl_mix_simple_fs_dma.glsl  bowl_mix_simple_vs.glsl
bowl/src/: bowl.rs  cube.rs  main.rs  mesh.rs
gl-wrapper/: Cargo.toml
utils/: Cargo.toml
utils/src/: buffer.rs  lib.rs  program.rs
