[package]
name = "bowl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl="*"
glfw = "0.52.0"
anyhow = "1.0.75"
thiserror = "1.0.47"
image = "0.24.7"
nalgebra-glm="0.18.0"
gl-wrapper={path="../gl-wrapper"}